--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "ffmpeg-binaries": "^4.0.0",
         "node-fetch": "^2.6.0",
         "opusscript": "0.0.7",
+        "yt-search": "^1.1.2",
         "ytdl-core": "^2.0.0"
     }
 }
