--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "author": "dmcalp",
     "license": "ISC",
     "dependencies": {
-        "call-of-duty-api": "^1.3.1",
-        "discord.js": "^11.5.1",
+        "@discordjs/opus": "^0.4.0",
+        "call-of-duty-api": "^1.3.2",
+        "discord.js": "^12.5.1",
         "eslint": "^6.4.0",
         "ffmpeg": "0.0.4",
-        "ffmpeg-binaries": "^4.0.0",
+        "ffmpeg-static": "^4.2.7",
         "node-fetch": "^2.6.1",
-        "opusscript": "0.0.7",
         "request": "^2.88.2",
-        "yt-search": "^2.5.2",
+        "yt-search": "^2.7.3",
         "ytdl-core": "^4.5.0"
     }
 }
