--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "dependencies": {
         "@discordjs/opus": "^0.4.0",
         "call-of-duty-api": "^1.3.2",
+        "coingecko-api": "^1.0.10",
         "discord.js": "^12.5.1",
         "eslint": "^6.4.0",
         "ffmpeg": "0.0.4",
         "ffmpeg-static": "^4.2.7",
         "node-fetch": "^2.6.1",
+        "puppeteer": "^9.0.0",
+        "python-shell": "^3.0.0",
         "request": "^2.88.2",
         "yt-search": "^2.7.6",
         "ytdl-core": "^4.5.0"
