--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "license": "ISC",
     "dependencies": {
         "@discordjs/opus": "^0.8.0",
+        "@discordjs/rest": "^1.1.0",
         "ansi-regex": "^6.0.1",
         "coingecko-api": "^1.0.10",
-        "discord.js": "^12.5.1",
+        "discord.js": "^14.3.0",
         "eslint": "^6.8.0",
         "ffmpeg": "0.0.4",
         "ffmpeg-static": "^4.2.7",
