--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "dependencies": {
         "@discordjs/opus": "^0.8.0",
         "@discordjs/rest": "^1.1.0",
+        "@discordjs/voice": "^0.11.0",
         "ansi-regex": "^6.0.1",
         "coingecko-api": "^1.0.10",
         "discord.js": "^14.3.0",
         "eslint": "^6.8.0",
         "ffmpeg": "0.0.4",
         "ffmpeg-static": "^4.2.7",
+        "libsodium-wrappers": "^0.7.10",
         "node-fetch": "^2.6.7",
         "python-shell": "^3.0.0",
         "request": "^2.88.2",
