--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
         "ansi-regex": "^6.0.1",
         "coingecko-api": "^1.0.10",
         "discord.js": "^14.3.0",
-        "eslint": "^6.8.0",
         "ffmpeg": "0.0.4",
         "ffmpeg-static": "^4.2.7",
         "libsodium-wrappers": "^0.7.10",
         "node-fetch": "^2.6.7",
+        "play-dl": "^1.9.5",
         "python-shell": "^3.0.0",
         "request": "^2.88.2",
-        "ws": "^8.2.2",
-        "yt-search": "^2.10.1",
-        "ytdl-core": "^4.11.2"
+        "ws": "^8.2.2"
+    },
+    "devDependencies": {
+        "eslint": "^8.24.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-plugin-import": "^2.26.0"
     }
 }
